# disrust-captioner

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
models/: segmentation-3.0.onnx  wespeaker_en_voxceleb_CAM++.onnx
src/: index.html  lib.rs  main.js  main.rs  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: audio.rs  diarize.rs  lib.rs  main.rs  transcribe.rs
src/audio/: loopback_capture.rs  mod.rs
src/config/: persistence.rs
src/diarization/: mod.rs  pyannote.rs  speaker_manager.rs
src/sherpa_onnx/: diarizer.rs  mod.rs  transcriber.rs
src/transcription/: mod.rs  whisper_integration.rs
src/ui/: app.rs
