[package]
name = "disrust-captioner"
version = "0.1.0"
authors = ["Disrust (Brian)"]
edition = "2021"
license = "MIT"

[dependencies]
whisper-rs = "0.13.2"
cpal = "0.15.3"
crossbeam-channel = "0.5.14"
chrono = "0.4.39"
egui = "0.30.0"
eframe = "0.30.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ringbuf = "0.4.7"
sherpa-rs = "0.6.2"
iced = "0.13.1"
rand = "0.8.5"
egui_plot = "0.30.0"