[package]
name = "disrust-captioner"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "disrust_captioner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1.18"
cpal = "0.15"
whisper-rs = "0.13.0"

# Set macOS deployment target to 10.15 (Catalina) or higher
[package.metadata.tauri.bundle.macOS]
minimum-system-version = "10.15"

# Configure environment variables for building native dependencies
[package.metadata.tauri.build]
beforeBuildCommand = ""
beforeDevCommand = ""

# Set environment variables for building whisper-rs
[package.metadata.tauri.build.env]
MACOSX_DEPLOYMENT_TARGET = "10.15"

